# knowledge

./: .gitignore  Gemfile  README.md  _config.yml  build.sh  env.sh  index.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.jupyter_cache/: global.db
docs/data_science/: readme.md
docs/data_science/contraint_programming/: readme.md
docs/data_science/data_manipulation_tricks/: readme.md
docs/data_science/outlier_detection/: readme.md
docs/data_science/useful_links/: readme.md
docs/linux/: readme.md
docs/notebooks/: readme.md  test_notebook.html
docs/pentest/: Using Tor.md  misc.md  readme.md  samba.md  shodan.md
docs/postgresql/: readme.md
docs/postgresql/links/: readme.md
docs/postgresql/snippets/: readme.md
docs/python/: readme.md
docs/python/databricks/: readme.md
docs/python/kedro/: readme.md
docs/python/links/: readme.md
docs/python/misc/: readme.md
docs/python/plotly/: readme.md
docs/python/pyspark/: readme.md
docs/python/selenium/: readme.md
docs/selenium/: readme.md
docs/stable_diffusion/: intro.md  upscaling.md
docs/windows/: context_managers.md  misc.md  readme.md  resize_videos.md  setup.md
jupyter_config/: migrated
knowledge/: CONTRIBUTING.md  _config.yml  _toc.yml  intro.md
knowledge/docs/airflow/: aws.md
knowledge/docs/android/: apps.md  rooting.md
knowledge/docs/data_science/: bivariate_analysis.ipynb  constraint_programming.md  data_manipulation_tricks.md  outlier_detection.md  test_notebook.ipynb  useful_links.md
knowledge/docs/dev/: cursor.md
knowledge/knowledge/: _config.yml
(+58 files in other folders)
