[project]
name = "knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter-book>=1.0.3",
    "jupyter-cache>=1.0.1",
    "jupyter-server>=2.14.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.14.0",
    "scipy>=1.14.1",
    "sphinx-multitoc-numbering>=0.1.3",
    "statsmodels>=0.14.4",
]
